Correcting the z-index of a map element so that it won't show when a modal is open

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,7 +15,7 @@ form.login {
 .modal {
   z-index:200;
 }
-.leaflet-top, .leaflet-pane, .leaflet-overlay-pane, .leaflet-layer, .leaflet-map-pane canvas, .esri-dynamic-attribution {
+.leaflet-top, .leaflet-bottom, .leaflet-pane, .leaflet-overlay-pane, .leaflet-layer, .leaflet-map-pane canvas, .esri-dynamic-attribution {
   z-index: 1;
 }
 .modal-card-body form.login, .modal-card-body form.signup {
